--- a/docker/Dockerfile81
+++ b/docker/Dockerfile81
@@ -47,3 +47,6 @@ COPY . .
 # Run: CMD php-fpm -D && nginx -g 'daemon off;'
 COPY docker/start.sh /
 CMD ["/bin/sh", "/start.sh"]
+
+# Configure a healthcheck to validate that everything is up & running
+HEALTHCHECK --timeout=10s CMD curl --silent --fail http://127.0.0.1/fpm-ping
