--- a/docker/fpm-pool.81.conf
+++ b/docker/fpm-pool.81.conf
@@ -1,3 +1,7 @@
+[global]
+;;; Log to stderr
+error_log = /dev/stderr
+
 ; Start a new pool named 'www'.
 ; the variable $pool can be used in any directive and will be replaced by the
 ; pool name ('www' here)
@@ -250,7 +254,7 @@ pm.max_spare_servers = 3
 ;       anything, but it may not be a good idea to use the .php extension or it
 ;       may conflict with a real PHP file.
 ; Default Value: not set
-;pm.status_path = /status
+pm.status_path = /fpm-status
 
 ; The address on which to accept FastCGI status request. This creates a new
 ; invisible pool that can handle requests independently. This is useful
@@ -403,20 +407,23 @@ ping.path = /fpm-ping
 ; Default Value: current directory or / when chroot
 ;chdir = /var/www
 
+;;; Catch output from PHP
 ; Redirect worker stdout and stderr into main error log. If not set, stdout and
 ; stderr will be redirected to /dev/null according to FastCGI specs.
 ; Note: on highloaded environment, this can cause some delay in the page
 ; process time (several ms).
 ; Default Value: no
-;catch_workers_output = yes
+catch_workers_output = yes
 
+;;; Remove the 'child 10 said into stderr' prefix in the log and only show the actual message
 ; Decorate worker output with prefix and suffix containing information about
 ; the child that writes to the log and if stdout or stderr is used as well as
 ; log level and time. This options is used only if catch_workers_output is yes.
 ; Settings to "no" will output data as written to the stdout or stderr.
 ; Default value: yes
-;decorate_workers_output = no
+decorate_workers_output = no
 
+;;; Make sure the FPM workers can reach the environment variables for configuration
 ; Clear environment in FPM workers
 ; Prevents arbitrary environment variables from reaching FPM worker processes
 ; by clearing the environment in workers before env vars specified in this
@@ -424,7 +431,7 @@ ping.path = /fpm-ping
 ; Setting to "no" will make all environment variables available to PHP code
 ; via getenv(), $_ENV and $_SERVER.
 ; Default Value: yes
-;clear_env = no
+clear_env = no
 
 ; Limits the extensions of the main script FPM will allow to parse. This can
 ; prevent configuration mistakes on the web server side. You should only limit
