--- a/docker/nginx.app.conf
+++ b/docker/nginx.app.conf
@@ -17,6 +17,9 @@ server {
 	# fix redirect (prevent redirect from localhost:<port> to localhost on host machine) when directory no index
 	absolute_redirect off;
 
+	# logging format
+	access_log /dev/stdout main;
+
 	location / {
 		# Check if a file or directory index file exists, else route it to index.php.
 		try_files $uri $uri/ /index.php?q=$uri&$args;
