docker: override PHP REMOTE_ADDR with real ip

--- a/docker/nginx.app.conf
+++ b/docker/nginx.app.conf
@@ -33,6 +33,26 @@ server {
 
 		# hide php version
 		fastcgi_hide_header X-Powered-By;
+
+		# override remote_addr: START
+		set $realip $remote_addr;
+
+		## Check if X-Forwarded-For header is present and contains an IPv4 or IPv6 address
+		if ($http_x_forwarded_for) {
+			set $realip $http_x_forwarded_for;
+		}
+		if ($realip ~ "(.*),") {
+			set $realip $1;
+		}
+
+		## use IP from Cloudflare
+		if ($http_cf_connecting_ip) {
+			set $realip $http_cf_connecting_ip;
+		}
+
+		## set PHP REMOTE_ADDR
+		fastcgi_param REMOTE_ADDR $realip;
+		# override remote_addr: END
 	}
 
 	# Allow fpm ping and status from localhost
