ci: move document root to public

--- a/docker/nginx.app.conf
+++ b/docker/nginx.app.conf
@@ -11,7 +11,7 @@ server {
 	listen [::]:80 default_server;
 
 	server_name _;
-	root /app;
+	root /app/public;
 	index index.htm index.html index.php;
 
 	# fix redirect (prevent redirect from localhost:<port> to localhost on host machine) when directory no index
