--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ application/logs/*
 
 !application/*/.htaccess
 
-composer.lock
+#composer.lock
 tests/mocks/database/ci_test.sqlite
 
 user_guide_src/build/*
