feat: add migration

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ BASE_URL=
 # CodeIgniter
 CI_ENV=					# development, testing, production
 CI_ENCRYPTION_KEY=		# any string for encryption
+CI_MIGRATION=			# false, true
+CI_MIGRATION_VERSION=	# false, version number, latest
 
 # Database
 DB_HOST=
