--- a/docker/Dockerfile80
+++ b/docker/Dockerfile80
@@ -21,6 +21,9 @@ RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/bin -
 # composer package phpdotenv requirements
 RUN apk add php-mbstring
 
+# database / migration
+RUN apk add php-mysqli
+
 
 
 # NGINX Configurations
