--- a/docker/Dockerfile81
+++ b/docker/Dockerfile81
@@ -21,6 +21,9 @@ RUN curl -sS https://getcomposer.org/installer | php81 -- --install-dir=/usr/bin
 # composer package phpdotenv requirements
 RUN apk add php81-mbstring
 
+# database / migration
+RUN apk add php81-mysqli
+
 
 
 # NGINX Configurations
