feat: add message -> send email

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,10 @@ DB_HOST=
 DB_NAME=
 DB_USER=
 DB_PASS=
+
+# EMAIL SMTP
+MAIL_SENDER_NAME=
+MAIL_HOST=				# ssl://smtp.zoho.com, ssl://smtp.gmail.com, ssl://smtp.googlemail.com
+MAIL_PORT=				# 465
+MAIL_USER=
+MAIL_PASS=
