--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,8 @@ CI_ENV=					# development, testing, production
 CI_ENCRYPTION_KEY=		# any string for encryption
 CI_MIGRATION=			# false, true
 CI_MIGRATION_VERSION=	# false, version number, latest
+CI_STORAGE=				# local
+CI_STORAGE_PATH=		# document root / public path for storage with trailing slash, ex: storage/
 
 # Database
 DB_HOST=
