--- a/docker/Dockerfile80
+++ b/docker/Dockerfile80
@@ -43,6 +43,11 @@ RUN ln -s /usr/sbin/php-fpm8 /usr/sbin/php-fpm || true
 COPY docker/fpm-pool.80.conf /etc/php8/php-fpm.d/www.conf
 COPY docker/php.ini /etc/php8/conf.d/custom.ini
 
+# Fix Permission (support volume)
+ARG UID=1000
+RUN adduser -S www-data -u $UID
+RUN sed -i "s/user = nobody/user = www-data/g" /etc/php8/php-fpm.d/www.conf
+RUN sed -i "s/group = nobody/group = www-data/g" /etc/php8/php-fpm.d/www.conf
 
 
 # Application
