--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ CI_ENV=					# development, testing, production
 CI_ENCRYPTION_KEY=		# any string for encryption
 CI_MIGRATION=			# false, true
 CI_MIGRATION_VERSION=	# false, version number, latest
-CI_STORAGE=				# local
+CI_STORAGE=				# local, google
 CI_STORAGE_PATH=		# document root / public path for storage with trailing slash, ex: storage/
 
 # Database
@@ -21,3 +21,6 @@ MAIL_HOST=				# ssl://smtp.zoho.com, ssl://smtp.gmail.com, ssl://smtp.googlemail
 MAIL_PORT=				# 465
 MAIL_USER=
 MAIL_PASS=
+
+# Storage
+GOOGLE_STORAGE_CREDENTIAL=	# path of google-service-account.json
