feat: add upload to storage

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,8 @@ CI_ENV=					# development, testing, production
 CI_ENCRYPTION_KEY=		# any string for encryption
 CI_MIGRATION=			# false, true
 CI_MIGRATION_VERSION=	# false, version number, latest
+CI_STORAGE=				# local, cloudinary, google
+CI_STORAGE_PATH=		# document root / public path for storage with trailing slash, ex: storage/
 
 # Database
 DB_HOST=
@@ -19,3 +21,12 @@ MAIL_HOST=				# ssl://smtp.zoho.com, ssl://smtp.gmail.com, ssl://smtp.googlemail
 MAIL_PORT=				# 465
 MAIL_USER=
 MAIL_PASS=
+
+# Storage
+## Cloudinary
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+
+## Google Storage
+GOOGLE_STORAGE_CREDENTIAL=		# path of google-service-account.json
